<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/secondaire"
    tools:context=".controler.ViewArticle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/primaire"
            style="@style/Title1"
            android:text="@string/simple_blog" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/primaire"
            style="@style/Title3"
            android:text="@string/ajouter_un_article" />

        <EditText
            android:id="@+id/titre_add_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:hint="@string/titre"
            android:background="@drawable/border" />

        <EditText
            android:id="@+id/autor_add_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:hint="@string/nom_auteur"
            android:background="@drawable/border" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contenu_add_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:hint="@string/contenu"
            android:background="@drawable/border"
            android:inputType="textMultiLine"
            android:minLines="10"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/main_button_vald"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border"
            android:text="@string/ajouter_l_article" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/quit_add_article"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/primaire"
            app:srcCompat="@drawable/quit"
            app:tint="@android:color/white"
            android:contentDescription="quitter" />


    </LinearLayout>
</ScrollView>
